--- a/MonteCarloMatching.ipynb
+++ b/MonteCarloMatching.ipynb
@@ -150,38 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "00b0711b-8935-46e2-a36c-114b90e35f1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 9.31322575e-10  0.00000000e+00  0.00000000e+00 ...  0.00000000e+00\n",
-      "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  1.25000000e-01  0.00000000e+00 ...  0.00000000e+00\n",
-      "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  2.11758237e-22 ...  0.00000000e+00\n",
-      "   0.00000000e+00  0.00000000e+00]\n",
-      " ...\n",
-      " [-2.27373675e-13  0.00000000e+00 -1.13686838e-13 ...  4.76837158e-07\n",
-      "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00 -2.68435456e+08  0.00000000e+00 ...  0.00000000e+00\n",
-      "   5.96046448e-08  0.00000000e+00]\n",
-      " [-1.60000000e+01 -3.05175781e-05  0.00000000e+00 ...  0.00000000e+00\n",
-      "   0.00000000e+00  2.84217094e-14]]\n"
-     ]
-    }
-   ],
+   "execution_count": 45,
+   "id": "69e53775-6613-4908-80aa-6db1980fd65b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "denseAdj = mat.copy().todense()\n",
-    "denseInv = invMat.copy().todense()"
+    "from scipy import linalg\n",
+    "Aij = mat.copy().tocoo()\n",
+    "for i,j,v in zip(Aij.row, Aij.col, Aij.data):\n",
+    "    (i,j,v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "d271d508-ce9f-4f46-9b36-25beb546dc98",
    "metadata": {
     "tags": []
@@ -192,248 +176,491 @@
      "output_type": "stream",
      "text": [
       "0 20\n",
+      "0.0\n",
       "0 23\n",
+      "0.0\n",
       "0 25\n",
+      "0.0\n",
       "0 26\n",
+      "0.0\n",
       "0 27\n",
+      "0.0\n",
       "0 28\n",
+      "0.0\n",
       "0 30\n",
+      "0.0\n",
       "0 32\n",
+      "0.0\n",
       "0 33\n",
+      "0.0\n",
       "0 34\n",
+      "0.0\n",
       "0 36\n",
+      "0.0\n",
       "0 37\n",
+      "0.0\n",
       "0 39\n",
+      "0.0\n",
       "1 20\n",
+      "0.0\n",
       "1 21\n",
+      "0.0\n",
       "1 23\n",
+      "0.0\n",
       "1 24\n",
+      "0.0\n",
       "1 28\n",
+      "0.0\n",
       "1 31\n",
+      "0.0\n",
       "1 32\n",
+      "0.0\n",
       "1 33\n",
+      "0.0\n",
       "1 34\n",
+      "0.0\n",
       "1 38\n",
+      "0.0\n",
       "1 39\n",
+      "0.0\n",
       "2 20\n",
+      "0.0\n",
       "2 21\n",
+      "0.0\n",
       "2 22\n",
+      "0.0\n",
       "2 23\n",
+      "0.0\n",
       "2 24\n",
+      "0.0\n",
       "2 25\n",
+      "0.0\n",
       "2 26\n",
+      "0.0\n",
       "2 27\n",
+      "0.0\n",
       "2 28\n",
+      "0.0\n",
       "2 29\n",
+      "0.0\n",
       "2 30\n",
+      "0.0\n",
       "2 31\n",
+      "0.0\n",
       "2 33\n",
+      "0.0\n",
       "2 34\n",
+      "0.0\n",
       "2 36\n",
+      "0.0\n",
       "2 37\n",
+      "0.0\n",
       "3 23\n",
+      "0.0\n",
       "3 26\n",
+      "0.0\n",
       "3 27\n",
+      "0.0\n",
       "3 28\n",
+      "0.0\n",
       "3 30\n",
+      "0.0\n",
       "3 32\n",
+      "0.0\n",
       "3 36\n",
+      "0.0\n",
       "3 37\n",
+      "0.0\n",
       "3 39\n",
+      "0.0\n",
       "4 21\n",
+      "0.0\n",
       "4 22\n",
+      "0.0\n",
       "4 23\n",
+      "0.0\n",
       "4 26\n",
+      "0.0\n",
       "4 29\n",
+      "0.0\n",
       "4 30\n",
+      "0.0\n",
       "4 31\n",
+      "0.0\n",
       "4 32\n",
+      "0.0\n",
       "4 33\n",
+      "0.0\n",
       "4 35\n",
+      "0.0\n",
       "4 36\n",
+      "0.0\n",
       "4 37\n",
+      "0.0\n",
       "4 38\n",
+      "0.0\n",
       "5 20\n",
+      "0.0\n",
       "5 22\n",
+      "0.0\n",
       "5 23\n",
+      "0.0\n",
       "5 24\n",
+      "0.0\n",
       "5 25\n",
+      "0.0\n",
       "5 27\n",
+      "0.0\n",
       "5 28\n",
+      "0.0\n",
       "5 29\n",
+      "0.0\n",
       "5 30\n",
+      "0.0\n",
       "5 31\n",
+      "0.0\n",
       "5 32\n",
+      "0.0\n",
       "5 34\n",
+      "0.0\n",
       "5 39\n",
+      "0.0\n",
       "6 20\n",
+      "0.0\n",
       "6 21\n",
+      "0.0\n",
       "6 22\n",
+      "0.0\n",
       "6 23\n",
+      "0.0\n",
       "6 28\n",
+      "0.0\n",
       "6 30\n",
+      "0.0\n",
       "6 31\n",
+      "0.0\n",
       "6 34\n",
+      "0.0\n",
       "6 35\n",
+      "0.0\n",
       "6 36\n",
+      "0.0\n",
       "7 20\n",
+      "0.0\n",
       "7 21\n",
+      "0.0\n",
       "7 22\n",
+      "0.0\n",
       "7 23\n",
+      "0.0\n",
       "7 24\n",
+      "0.0\n",
       "7 28\n",
+      "0.0\n",
       "7 29\n",
+      "0.0\n",
       "7 31\n",
+      "0.0\n",
       "7 33\n",
+      "0.0\n",
       "7 36\n",
+      "0.0\n",
       "7 38\n",
+      "0.0\n",
       "8 20\n",
+      "0.0\n",
       "8 21\n",
+      "0.0\n",
       "8 22\n",
+      "0.0\n",
       "8 23\n",
+      "0.0\n",
       "8 24\n",
+      "0.0\n",
       "8 27\n",
+      "0.0\n",
       "8 28\n",
+      "0.0\n",
       "8 29\n",
+      "0.0\n",
       "8 30\n",
+      "0.0\n",
       "8 31\n",
+      "0.0\n",
       "8 32\n",
+      "0.0\n",
       "8 33\n",
+      "0.0\n",
       "8 34\n",
+      "0.0\n",
       "8 36\n",
+      "0.0\n",
       "8 38\n",
+      "0.0\n",
       "8 39\n",
+      "0.0\n",
       "9 20\n",
+      "0.0\n",
       "9 21\n",
+      "0.0\n",
       "9 22\n",
+      "0.0\n",
       "9 23\n",
+      "0.0\n",
       "9 26\n",
+      "0.0\n",
       "9 28\n",
+      "0.0\n",
       "9 30\n",
+      "0.0\n",
       "9 32\n",
+      "0.0\n",
       "9 33\n",
+      "0.0\n",
       "9 36\n",
+      "0.0\n",
       "9 38\n",
+      "0.0\n",
       "9 39\n",
+      "0.0\n",
       "10 20\n",
+      "0.0\n",
       "10 21\n",
+      "0.0\n",
       "10 23\n",
+      "0.0\n",
       "10 24\n",
+      "0.0\n",
       "10 25\n",
+      "0.0\n",
       "10 27\n",
+      "0.0\n",
       "10 28\n",
+      "0.0\n",
       "10 29\n",
+      "0.0\n",
       "10 30\n",
+      "0.0\n",
       "10 31\n",
+      "0.0\n",
       "10 32\n",
+      "0.0\n",
       "10 33\n",
+      "0.0\n",
       "10 35\n",
+      "0.0\n",
       "10 36\n",
+      "0.0\n",
       "10 37\n",
+      "0.0\n",
       "10 38\n",
+      "0.0\n",
       "10 39\n",
+      "0.0\n",
       "11 20\n",
+      "0.0\n",
       "11 21\n",
+      "0.0\n",
       "11 22\n",
+      "0.0\n",
       "11 23\n",
+      "0.0\n",
       "11 26\n",
+      "0.0\n",
       "11 27\n",
+      "0.0\n",
       "11 28\n",
+      "0.0\n",
       "11 30\n",
+      "0.0\n",
       "11 32\n",
+      "0.0\n",
       "11 33\n",
+      "0.0\n",
       "11 34\n",
+      "0.0\n",
       "11 35\n",
+      "0.0\n",
       "11 37\n",
+      "0.0\n",
       "11 38\n",
+      "0.0\n",
       "12 20\n",
+      "0.0\n",
       "12 22\n",
+      "0.0\n",
       "12 23\n",
+      "0.0\n",
       "12 24\n",
+      "0.0\n",
       "12 29\n",
+      "0.0\n",
       "12 31\n",
+      "0.0\n",
       "12 32\n",
+      "0.0\n",
       "12 33\n",
+      "0.0\n",
       "12 35\n",
+      "0.0\n",
       "12 36\n",
+      "0.0\n",
       "12 37\n",
+      "0.0\n",
       "12 38\n",
+      "0.0\n",
       "13 20\n",
+      "0.0\n",
       "13 21\n",
+      "0.0\n",
       "13 22\n",
+      "0.0\n",
       "13 26\n",
+      "0.0\n",
       "13 29\n",
+      "0.0\n",
       "13 30\n",
+      "0.0\n",
       "13 33\n",
+      "0.0\n",
       "13 34\n",
+      "0.0\n",
       "13 38\n",
+      "0.0\n",
       "14 20\n",
+      "0.0\n",
       "14 21\n",
+      "0.0\n",
       "14 22\n",
+      "0.0\n",
       "14 23\n",
+      "0.0\n",
       "14 26\n",
+      "0.0\n",
       "14 27\n",
+      "0.0\n",
       "14 29\n",
+      "0.0\n",
       "14 33\n",
+      "0.0\n",
       "14 34\n",
+      "0.0\n",
       "14 35\n",
+      "0.0\n",
       "14 38\n",
+      "0.0\n",
       "15 22\n",
+      "0.0\n",
       "15 24\n",
+      "0.0\n",
       "15 25\n",
+      "0.0\n",
       "15 26\n",
+      "0.0\n",
       "15 27\n",
+      "0.0\n",
       "15 28\n",
+      "0.0\n",
       "15 30\n",
+      "0.0\n",
       "15 31\n",
+      "0.0\n",
       "15 32\n",
+      "0.0\n",
       "15 33\n",
+      "0.0\n",
       "15 35\n",
+      "0.0\n",
       "15 36\n",
+      "0.0\n",
       "15 37\n",
+      "0.0\n",
       "15 38\n",
+      "0.0\n",
       "16 21\n",
+      "0.0\n",
       "16 24\n",
+      "0.0\n",
       "16 25\n",
+      "0.0\n",
       "16 26\n",
+      "0.0\n",
       "16 27\n",
+      "0.0\n",
       "16 32\n",
+      "0.0\n",
       "16 34\n",
+      "0.0\n",
       "16 35\n",
+      "0.0\n",
       "16 36\n",
+      "0.0\n",
       "16 38\n",
+      "0.0\n",
       "17 20\n",
+      "0.0\n",
       "17 23\n",
+      "0.0\n",
       "17 24\n",
+      "0.0\n",
       "17 27\n",
+      "0.0\n",
       "17 29\n",
+      "0.0\n",
       "17 30\n",
+      "0.0\n",
       "17 35\n",
+      "0.0\n",
       "17 36\n",
+      "0.0\n",
       "17 38\n",
+      "0.0\n",
       "17 39\n",
+      "0.0\n",
       "18 20\n",
+      "0.0\n",
       "18 23\n",
+      "0.0\n",
       "18 24\n",
+      "0.0\n",
       "18 26\n",
+      "0.0\n",
       "18 28\n",
+      "0.0\n",
       "18 31\n",
+      "0.0\n",
       "18 32\n",
+      "0.0\n",
       "18 33\n",
+      "0.0\n",
       "18 34\n",
+      "0.0\n",
       "18 37\n",
+      "0.0\n",
       "18 39\n",
+      "0.0\n",
       "19 23\n",
+      "0.0\n",
       "19 26\n",
+      "0.0\n",
       "19 27\n",
+      "0.0\n",
       "19 28\n",
+      "0.0\n",
       "19 29\n",
+      "0.0\n",
       "19 30\n",
+      "0.0\n",
       "19 31\n",
+      "0.0\n",
       "19 34\n",
+      "0.0\n",
       "19 36\n",
+      "0.0\n",
       "19 38\n",
-      "19 39\n"
+      "0.0\n",
+      "19 39\n",
+      "0.0\n"
      ]
     }
    ],
@@ -447,9 +674,15 @@
     "    i=e[0]\n",
     "    j=e[1]\n",
     "    print(i,j)\n",
+    "    print(mat[i,j])\n",
+    "    \"\"\"\n",
     "    Aij = denseAdj.copy()\n",
     "    Aij[i,:]=0.0\n",
     "    Aij[:,j]=0.0\n",
+    "    print(denseAdj[i,j])\n",
+    "    print(Aij[i,j])\n",
+    "    # Having a zero on the diagonal of a triangular matrix guaruntees singularity\n",
+    "    Aij[i,j]=denseAdj[i,j]\n",
     "    #Aij[i,j]=denseAdj[i,j]\n",
     "    try:\n",
     "        Bij = linalg.inv(Aij)\n",
@@ -457,7 +690,8 @@
     "        print(2**Aij[i,j])\n",
     "        print(det)\n",
     "    except Exception :\n",
-    "        continue\n"
+    "        continue\n",
+    "    \"\"\""
    ]
   },
   {
