--- a/MonteCarloMatching.ipynb
+++ b/MonteCarloMatching.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7fa5f4e911c0>"
+       "<matplotlib.lines.Line2D at 0x7f7594dd3160>"
       ]
      },
      "execution_count": 4,
@@ -124,8 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Randomized Adj in 0.00012993812561035156 seconds\n",
-      "Inverted Matrix in 0.00896000862121582 seconds\n"
+      "Randomized Adj in 0.00014090538024902344 seconds\n",
+      "Inverted Matrix in 0.010372400283813477 seconds\n"
      ]
     }
    ],
@@ -367,6 +367,25 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "da725ad1-e1d0-41bd-9d41-e63569e3007d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_duplicate_values(pairs):\n",
+    "    seen_values = set()\n",
+    "    \n",
+    "    for pair in pairs:\n",
+    "        for value in pair:\n",
+    "            if value in seen_values:\n",
+    "                return True\n",
+    "            seen_values.add(value)\n",
+    "    \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "57fe0761-1769-4fe9-9365-32a405a13f66",
    "metadata": {
     "tags": []
@@ -376,9 +395,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated Bipartite Graph in 0.00014734268188476562 seconds\n",
-      "Generated reference matching in 0.0004646778106689453 seconds\n",
-      "Convert the graph to a SciPy sparse matrix in 0.0006082057952880859 seconds\n"
+      "Generated Bipartite Graph in 0.0002262592315673828 seconds\n",
+      "Generated reference matching in 0.0006341934204101562 seconds\n",
+      "Convert the graph to a SciPy sparse matrix in 0.0006306171417236328 seconds\n"
      ]
     },
     {
@@ -405,11 +424,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n=10, Average Gauss Execution Time: 0.006225624994840473 seconds\n",
-      "n=10, Average Edmonds Execution Time: 0.0004531510057859123 seconds\n",
-      "Generated Bipartite Graph in 0.007730245590209961 seconds\n",
-      "Generated reference matching in 0.02982354164123535 seconds\n",
-      "Convert the graph to a SciPy sparse matrix in 0.004945516586303711 seconds\n"
+      "n=10, Average Gauss Execution Time: 0.006632528995396569 seconds\n",
+      "n=10, Valid Matching Gauss: True\n",
+      "n=10, Length Matching Gauss: 10\n",
+      "n=10, Average Edmonds Execution Time: 0.0005101980059407651 seconds\n",
+      "n=10, Valid Matching Edmonds: True\n",
+      "n=10, Length Matching Edmonds: 10\n",
+      "Generated Bipartite Graph in 0.008784055709838867 seconds\n",
+      "Generated reference matching in 0.03015279769897461 seconds\n",
+      "Convert the graph to a SciPy sparse matrix in 0.005316257476806641 seconds\n"
      ]
     },
     {
@@ -436,11 +459,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n=100, Average Gauss Execution Time: 0.5009997410088545 seconds\n",
-      "n=100, Average Edmonds Execution Time: 0.05293760400672909 seconds\n",
-      "Generated Bipartite Graph in 1.376631736755371 seconds\n",
-      "Generated reference matching in 3.0779199600219727 seconds\n",
-      "Convert the graph to a SciPy sparse matrix in 1.3725244998931885 seconds\n"
+      "n=100, Average Gauss Execution Time: 1.705310190009186 seconds\n",
+      "n=100, Valid Matching Gauss: True\n",
+      "n=100, Length Matching Gauss: 100\n",
+      "n=100, Average Edmonds Execution Time: 0.04437724201125093 seconds\n",
+      "n=100, Valid Matching Edmonds: True\n",
+      "n=100, Length Matching Edmonds: 100\n",
+      "Generated Bipartite Graph in 0.8442425727844238 seconds\n",
+      "Generated reference matching in 2.622629165649414 seconds\n",
+      "Convert the graph to a SciPy sparse matrix in 1.8945236206054688 seconds\n"
      ]
     },
     {
@@ -467,8 +494,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n=1000, Average Gauss Execution Time: 95.25214488900383 seconds\n",
-      "n=1000, Average Edmonds Execution Time: 2.5698772159958025 seconds\n"
+      "n=1000, Average Gauss Execution Time: 120.03747882800235 seconds\n",
+      "n=1000, Valid Matching Gauss: True\n",
+      "n=1000, Length Matching Gauss: 1000\n",
+      "n=1000, Average Edmonds Execution Time: 2.6286033260112163 seconds\n",
+      "n=1000, Valid Matching Edmonds: True\n",
+      "n=1000, Length Matching Edmonds: 1000\n"
      ]
     }
    ],
@@ -521,12 +552,19 @@
     "    Gauss = GaussMatching(G)\n",
     "    PlotMatching(G,Edmonds,Gauss)\n",
     "    assert(len(Gauss)==len(Edmonds))\n",
+    "    assert(not has_duplicate_values(Edmonds))\n",
+    "    assert(not has_duplicate_values(Gauss))\n",
     "    numSamples = 1\n",
     "    execution_timeGauss = timeit.timeit(time_Gauss, number=numSamples) / numSamples  # 100 runs for averaging\n",
     "    execution_timeEdmonds = timeit.timeit(time_Edmonds, number=numSamples) / numSamples  # 100 runs for averaging\n",
     "    print(f\"n={n}, Average Gauss Execution Time: {execution_timeGauss} seconds\")\n",
+    "    print(f\"n={n}, Valid Matching Gauss: {not has_duplicate_values(Gauss)}\")\n",
+    "    print(f\"n={n}, Length Matching Gauss: {len(Gauss)}\")\n",
+    "\n",
     "    #print(f\"n={n}, Average GaussDOK Execution Time: {execution_timeGaussDOK} seconds\")\n",
-    "    print(f\"n={n}, Average Edmonds Execution Time: {execution_timeEdmonds} seconds\")"
+    "    print(f\"n={n}, Average Edmonds Execution Time: {execution_timeEdmonds} seconds\")\n",
+    "    print(f\"n={n}, Valid Matching Edmonds: {not has_duplicate_values(Edmonds)}\")\n",
+    "    print(f\"n={n}, Length Matching Edmonds: {len(Edmonds)}\")\n"
    ]
   },
   {
