wrapping up card alone

--- a/MonteCarloMatching.ipynb
+++ b/MonteCarloMatching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "8bd5d311-0a51-406f-984c-728f6d7ed51d",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "654592da-f1d7-481a-ae89-0441b75dea30",
    "metadata": {
     "tags": []
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "82f2fc8c-0f32-4948-80ee-53626b386ddc",
    "metadata": {
     "tags": []
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "06e02606-cadc-4905-8808-8142df545eb5",
    "metadata": {
     "tags": []
@@ -84,10 +84,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f7594dd3160>"
+       "<matplotlib.lines.Line2D at 0x7f75808ac5e0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "381d759c-a738-4ad5-a689-5613e85e5ef8",
    "metadata": {
     "tags": []
@@ -124,8 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Randomized Adj in 0.00014090538024902344 seconds\n",
-      "Inverted Matrix in 0.010372400283813477 seconds\n"
+      "Randomized Adj in 0.0001819133758544922 seconds\n",
+      "Inverted Matrix in 0.011191129684448242 seconds\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "69e53775-6613-4908-80aa-6db1980fd65b",
    "metadata": {
     "tags": []
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "e46cc1ca-e8d0-410d-935b-c8375c44dce2",
    "metadata": {
     "tags": []
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "cb4c9992-af6f-42ff-83d5-3cd6cb3854ee",
    "metadata": {},
    "outputs": [],
@@ -320,6 +320,84 @@
     "                    collabels = collabels[1:]  # This creates a new list without the first element\n",
     "                    break\n",
     "    return(matchingGaussian)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "70ffbc9a-1d7d-4f70-a4ea-7708dbfb2ccc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sympy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[45], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m linalg\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msparse\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcsgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m structural_rank\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msympy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m nextprime\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mGaussMatchingCardinality\u001b[39m(G):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m# Convert the graph to a SciPy sparse matrix\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     mat \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mto_scipy_sparse_array(G,\u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlil\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sympy'"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.sparse as sps\n",
+    "from scipy.sparse import triu, tril\n",
+    "from scipy import linalg\n",
+    "from scipy.sparse.csgraph import structural_rank\n",
+    "from sympy import nextprime\n",
+    "def GaussMatchingCardinality(G):\n",
+    "    # Convert the graph to a SciPy sparse matrix\n",
+    "    mat = nx.to_scipy_sparse_array(G,format=\"lil\")\n",
+    "    #mat.setdiag(1)\n",
+    "    # Set diagonal to 1 so matrix is invertible\n",
+    "    # Extract upper triangle of symmetric sparse matrix\n",
+    "    upper_triangle = triu(mat,format=\"csc\", k=1)\n",
+    "    lower_triangle = tril(mat,format=\"csc\")\n",
+    "    mat=lower_triangle+(upper_triangle*-1)\n",
+    "    n = mat.shape[0]\n",
+    "    next_prime = nextprime(n**4)\n",
+    "    mat.data = np.random.randint(1, next_prime, size=mat.nnz)\n",
+    "    \n",
+    "    try:\n",
+    "        invMat = sps.linalg.inv(mat)\n",
+    "        lu = scipy.sparse.linalg.splu(invMat)\n",
+    "        diagL = lu.L.diagonal()\n",
+    "        diagU = lu.U.diagonal()\n",
+    "        L,U = lu.L, lu.U\n",
+    "        d = diagL.prod()*diagU.prod()\n",
+    "        #print(\"sparse det\",d)\n",
+    "        invertible=True\n",
+    "    except Exception:\n",
+    "        invertible=False\n",
+    "        d = 0.0\n",
+    "\n",
+    "    if (d !=- 0.0 ):\n",
+    "        r = structural_rank(mat)\n",
+    "        return(r//2)\n",
+    "    else:\n",
+    "        raise CustomError(\"Perfect matching doesn't exist.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3ea36270-451e-4a8a-82ff-e26b4e94dce8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "verticesInMatching = GaussMatchingCardinality(G)\n",
+    "print(verticesInMatching)"
    ]
   },
   {
