finished prettying it up

--- a/MonteCarloMatching.ipynb
+++ b/MonteCarloMatching.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "800040ed-c8af-4fc2-a0c6-e2527e15b620",
+   "metadata": {},
+   "source": [
+    "# Maximum Matchings in General Graphs through Randomization (1989)\n",
+    "# Rabin, Vazirani\n",
+    "\n",
+    "Paper Link: [https://doi.org/10.1016/0196-6774(89)90005-9](https://doi.org/10.1016/0196-6774(89)90005-9)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c96f0be-982d-43b9-8b37-6ed9445c0705",
+   "metadata": {},
+   "source": [
+    "**Summary:**\n",
+    "\n",
+    "This paper presents a linear algebra-based method for finding Perfect Matching and Maximum Matchings in general graphs. It determines the cardinality of these matchings by finding the rank of the Tutte matrix. The paper also mentions a parallel algorithm to find perfect matchings, although it doesn't provide an explicit presentation of the algorithm.\n",
+    "\n",
+    "One notable quote from the paper is: \"Hence, by picking a substitution deterministically, and inverting AS, we obtain the perfect matching. Since matrix inversion is in NC² [Cs], the result follows.\" The paper acknowledges that, at the time it was written, an outstanding open problem in parallel computation was to provide a deterministic NC algorithm for matching.\n",
+    "\n",
+    "It is suggested that the exact procedure for extracting the matching from the inverted A matrix may not have been known at the time or was performed exactly as the sequential version, which could be problematic as G' is updated in each iteration.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8bd5d311-0a51-406f-984c-728f6d7ed51d",
@@ -521,6 +546,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe47fc1a-b847-40ca-a1f2-8bccdb03deb8",
+   "metadata": {},
+   "source": [
+    "$\\textbf{PERFECT MATCHING ALGORITHM.}$\n",
+    "The algorithm consists of two phases. In the first phase, a random substitution $S$ is chosen for $A$, as in Theorem 1. With high probability, this will be a good substitution for $A$. If so, the second phase will succeed in finding a perfect matching in $G$. This phase consists of $n/2$ iterations; in each iteration, one edge of the matching is found.\n",
+    "\n",
+    "In the first iteration, $AS$ is inverted, and an edge $(u_i, u_j)$ is found as described in Lemma 4. Since $|A_{ii,jj}| \\neq 0 \\pmod{p}$, $S$ is also a good substitution for the Tutte matrix $A_{ii,jj}$ of the graph $G_i$ induced on $V - \\{u_i, u_j\\}$.\n",
+    "\n",
+    "Now, by inverting $A_{ii,jj}$, an edge is chosen from $G_i$, and so on. The union of edges so chosen forms a perfect matching in $G$.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "69e53775-6613-4908-80aa-6db1980fd65b",
@@ -697,6 +735,22 @@
    "metadata": {},
    "source": [
     "**THEOREM (Lovász)**: Let $A$ be the Tutte matrix of graph $G$, and let $m$ be the size of a maximum matching in $G$. Then, $\\text{rank}$(A) = 2m."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "692e8b9c-9eb1-4d84-acee-1c92536dcdf6",
+   "metadata": {},
+   "source": [
+    "$\\textbf{THEOREM 1.}$ There is an $O(M(n) \\log^2 n)$ randomized (Monte Carlo) algorithm for computing the size of a maximum matching in a graph $G(V, E)$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14ce55c0-c3f0-4db6-b2c8-4b8d9d026ead",
+   "metadata": {},
+   "source": [
+    "Aside:  The algorithm is to randomize the adjacency matrix, check invertibility, and check rank."
    ]
   },
   {
