finished prettying it up

--- a/MonteCarloMatching.ipynb
+++ b/MonteCarloMatching.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "One notable quote from the paper is: \"Hence, by picking a substitution deterministically, and inverting AS, we obtain the perfect matching. Since matrix inversion is in NC² [Cs], the result follows.\" The paper acknowledges that, at the time it was written, an outstanding open problem in parallel computation was to provide a deterministic NC algorithm for matching.\n",
     "\n",
-    "It is suggested that the exact procedure for extracting the matching from the inverted A matrix may not have been known at the time or was performed exactly as the sequential version, which could be problematic as G' is updated in each iteration.\n"
+    "The exact procedure for extracting the matching from the inverted A matrix in parallel either may not have been known at the time or is performed exactly as the sequential version, which could be problematic as G' is updated in each iteration.\n"
    ]
   },
   {
