--- a/NaiveLinearAlgebraMatching.ipynb
+++ b/NaiveLinearAlgebraMatching.ipynb
@@ -553,7 +553,7 @@
     "$\\textbf{PERFECT MATCHING ALGORITHM.}$\n",
     "The algorithm consists of two phases. In the first phase, a random substitution $S$ is chosen for $A$, as in Theorem 1. With high probability, this will be a good substitution for $A$. If so, the second phase will succeed in finding a perfect matching in $G$. This phase consists of $n/2$ iterations; in each iteration, one edge of the matching is found.\n",
     "\n",
-    "In the first iteration, $AS$ is inverted, and an edge $(u_i, u_j)$ is found as described in Lemma 4. Since $|A_{ii,jj}| \\neq 0 \\pmod{p}$, $S$ is also a good substitution for the Tutte matrix $A_{ii,jj}$ of the graph $G_i$ induced on $V - \\{u_i, u_j\\}$.\n",
+    "In the first iteration, $A^S$ is inverted, and an edge $(u_i, u_j)$ is found as described in Lemma 4. Since $|A_{ii,jj}| \\neq 0 \\pmod{p}$, $S$ is also a good substitution for the Tutte matrix $A_{ii,jj}$ of the graph $G_i$ induced on $V - \\{u_i, u_j\\}$.\n",
     "\n",
     "Now, by inverting $A_{ii,jj}$, an edge is chosen from $G_i$, and so on. The union of edges so chosen forms a perfect matching in $G$.\n"
    ]
